# whipping_star

./: CMakeLists.txt  README  setup.sh  start_container.sh  test.txt  thatroot.sh
Appearence/: CMakeLists.txt  DL3plus1Sens.cc  DL3plus1_FC.cc  DL3plus1_FCTests.cc  DL3plus1_FCtutorial.cc  DL3plus1_FCwregen.cc  DL3plus1_data.cc  DL3plus1_fakedata.cc  DL3plus1_massgen.cc  DL3plus1_siginject.cc  DL3plus1_sysgen.cc  DL3plus1_testregen.cc  DLAppearenceSens.cc  DLAppearenceSens_OneBinSaveTest.cc  DLFakeData.cc  DLFreq.cc  DLFreq_wrong.cc  DLRaster.cc  covplotter.cc
FormInputs/: Makefile  combine.py  combine_1mu1p.py  form_input_to_sbnfit_base.cpp  form_input_to_sbnfit_data.cpp  form_input_to_sbnfit_data_forJosh.cpp  form_input_to_sbnfit_data_forNick.cpp  form_input_to_sbnfit_forAppearence_run1.cpp  form_input_to_sbnfit_forAppearence_run2.cpp  form_input_to_sbnfit_forAppearence_run3.cpp  form_input_to_sbnfit_forJosh.cpp  form_input_to_sbnfit_forJosh1.cpp  form_input_to_sbnfit_forJosh2.cpp  form_input_to_sbnfit_forJosh3.cpp  form_input_to_sbnfit_forKatie_run1.cpp  form_input_to_sbnfit_forKatie_run2.cpp  form_input_to_sbnfit_forKatie_run3.cpp  form_input_to_sbnfit_forNick.cpp
NuMuDisappearance/: CMakeLists.txt  DLNuMuDisappearenceSens.cc  DLNuMuDisappearenceSens_BaseChi2.cc  DLNuMuDisappearenceSens_BeforeMathChanges.cc  DLNuMuDisappearenceSens_DataTest.cc  DLNuMuDisappearenceSens_FakeDataDist.cc  DLNuMuDisappearenceSens_InjectionTest.cc  DLNuMuDisappearenceSens_MassGen.cc  DLNuMuDisappearenceSens_OneBinSaveTest.cc  DLNuMuDisappearenceSens_RateOnly.cc  DLNuMuDisappearenceSens_ScalingTest.cc  DetSysExplore.cc  fracdetvar.txt
NuMuDisappearance/covarMats/: fraccovar_flux_19bins.txt  fracdetvar_19bins.txt
NuMuDisappearance/covarMats/lauren_take2/: fraccovar_flux.txt  fraccovar_reinteraction.txt  fraccovar_reinteraction_19bins_v2.txt  fraccovar_xsec.txt  fraccovar_xsec_19bins_v2.txt
data/systematics/: make_total_covar_3plus1.py
data/systematics/1bin_uncombined_data/: fracdetvar_np_19bins.csv
examples/: CMakeLists.txt
gridscripts/: UniThrowjob.sh  log-FCFull  log-FCFullb  log-FCmethods  log-FCtests  log-FCtests2  log-massgen  log-siginject  outputs.txt  runjob_FCFull.sh  runjob_FCFull_makeup.sh  runjob_FCmethods.sh  runjob_FCtests.sh  runjob_FCtests2.sh  runjob_data.sh  runjob_example.sh  runjob_fakedata.sh  runjob_massgen.sh  runjob_siginject.sh  submit_UniThrow.sh  submit_runjob_FCFull.sh  submit_runjob_FCFull_makeup.sh  submit_runjob_FCmethods.sh  submit_runjob_FCtests.sh  submit_runjob_FCtests2.sh  submit_runjob_data.sh  submit_runjob_example.sh  submit_runjob_fakedata.sh  submit_runjob_fakedata1.sh  submit_runjob_massgen.sh  submit_runjob_siginject.sh
inc/: MillsFunctions.h  SBNchi.h  SBNcls.h  SBNconditional.h  SBNconfig.h  SBNcovariance.h  SBNfeld.h  SBNgenerate.h  SBNllminimizer.h  SBNosc.h  SBNprob.h  SBNsinglephoton.h  SBNspec.h  branch_variable.h  ngrid.h  prob.h
lee/: CMakeLists.txt  DLChiogram.cc  DLCovariance.cc  DLDis.cc  DLFakeDataGrid.cc  DLFreq.cc  DLFreq_slow.cc  DLSens.cc
libio/: CMakeLists.txt
src/: CMakeLists.txt  HIVEplot.cxx  MillsFunctions.cxx  SBNchi.cxx  SBNcls.cxx  SBNconditional.cxx  SBNconfig.cxx  SBNcovariance.cxx  SBNfeld.cxx  SBNfit3pN.cxx  SBNgenerate.cxx  SBNllminimizer.cxx  SBNosc.cxx  SBNprob.cxx  SBNsinglephoton.cxx  SBNspec.cxx  prob.cxx
unit/: CMakeLists.txt
working_directory/SinglePhoton_test/Unblinding/: grab_plot.sh  run_FitA.sh
working_directory/SinglePhoton_test/Unblinding/NewMetric/Exclusive_Fit/: run_exclusive_FitE.sh
working_directory/SinglePhoton_test/Unblinding/NewMetric/FinalFit/: run_FitA.sh  run_Script3_FitE.sh
xml/: TotalThreePlusOne.xml  TotalThreePlusOne_full.xml  TotalThreePlusOne_full_tmw.xml  TotalThreePlusOne_tutorial.xml  dllee_data_jan26.xml  dllee_lostat.xml  dllee_sens_Jan25.xml  dllee_sens_Jan25_flux.xml  dllee_sens_Jan25_reint.xml  dllee_sens_Jan25_xsec.xml  dllee_sens_Oct14_v48_NUMU.xml  nueappearence.xml  numudisappearance.xml  numudisappearance_q2.xml  numudisappearance_rateonly.xml  osctest_sens_xsec.xml
