include_directories(${CMAKE_SOURCE_DIR}/inc)

add_executable (DLAppearenceSens DLAppearenceSens.cc)
add_executable (DLAppearenceSens_OneBinSaveTest DLAppearenceSens_OneBinSaveTest.cc)
add_executable (DL3plus1Sens DL3plus1Sens.cc)
add_executable (DL3plus1_FC DL3plus1_FC.cc)
#add_executable (DLChiogram DLChiogram.cc)
#add_executable (DLFreq DLFreq.cc)
#add_executable (DLFakeData DLFakeData.cc)
#add_executable (DLFakeDataGrid DLFakeDataGrid.cc)
#add_executable (UnfoldScale UnfoldScale.cxx)
#add_executable (DLUnfold DLUnfold.cc)
#add_executable (LEESens LEESens.cc)
#add_executable (Variations Variations.cxx)
message("root libs: /cvmfs/larsoft.opensciencegrid.org/products/root/v6_12_04e/Linux64bit+3.10-2.17-e15-prof/lib")
target_link_libraries (DLAppearenceSens SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DLAppearenceSens_OneBinSaveTest SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DL3plus1Sens SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DL3plus1_FC SBNfitlib tinyxmllib EventWeight /cvmfs/larsoft.opensciencegrid.org/products/root/v6_12_04e/Linux64bit+3.10-2.17-e15-prof/lib/libMinuit.so)
#target_link_libraries (DLCovar SBNfitlib tinyxmllib EventWeight)
#target_link_libraries (DLFreq SBNfitlib tinyxmllib EventWeight)
#target_link_libraries (DLFakeData SBNfitlib tinyxmllib EventWeight)
#target_link_libraries (DLFakeDataGrid SBNfitlib tinyxmllib EventWeight)
#target_link_libraries (UnfoldScale SBNfitlib tinyxmllib EventWeight)
#target_link_libraries (DLUnfold SBNfitlib tinyxmllib EventWeight)
#target_link_libraries (LEESens SBNfitlib tinyxmllib EventWeight)
#target_link_libraries (Variations SBNfitlib tinyxmllib EventWeight)
