include_directories(${CMAKE_SOURCE_DIR}/inc)
include_directories(${EIGEN3_INCLUDE_DIRS})
#include_directories(/cvmfs/larsoft.opensciencegrid.org/products/root/v6_22_06a/Linux64bit+3.10-2.17-e19-p383b-prof/lib/libMinuit.so)
#message("eigen3: ${EIGEN3_INCLUDE_DIRS}")
add_executable (DLAppearenceSens DLAppearenceSens.cc)
add_executable (DL3plus1Sens DL3plus1Sens.cc)
add_executable (DL3plus1_FC DL3plus1_FC.cc)
add_executable (DL3plus1_FCTests DL3plus1_FCTests.cc)
add_executable (DL3plus1_fakedata DL3plus1_fakedata.cc)
add_executable (DL3plus1_data DL3plus1_data.cc)
add_executable (DL3plus1_massgen DL3plus1_massgen.cc)
add_executable (DL3plus1_siginject DL3plus1_siginject.cc)
add_executable (covplotter covplotter.cc)
add_executable (DL3plus1_testregen DL3plus1_testregen.cc)
add_executable (DL3plus1_FCwregen DL3plus1_FCwregen.cc)

#message("root libs: ${ROOT_LIBRARY_DIR}")
#message("root libs: ${ROOT_LIBRARIES}")
message("gprof: ${GPERFTOOLS_LIBS}")
set( COMMON_LINK_LIBS SBNfitlib tinyxmllib EventWeight ${ROOT_LIBRARIES} ${ROOT_LIBRARY_DIR}/libMinuit.so ${GPERFTOOLS_LIBS} )

target_link_libraries (DLAppearenceSens SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DL3plus1Sens SBNfitlib tinyxmllib EventWeight)
#extra library added to get TMinuit
target_link_libraries (DL3plus1_FC SBNfitlib tinyxmllib EventWeight ${ROOT_LIBRARIES} ${ROOT_LIBRARY_DIR}/libMinuit.so )
target_link_libraries (DL3plus1_FCTests SBNfitlib tinyxmllib EventWeight ${ROOT_LIBRARIES} ${ROOT_LIBRARY_DIR}/libMinuit.so ${GPERFTOOLS_LIBS} )
target_link_libraries (DL3plus1_fakedata SBNfitlib tinyxmllib EventWeight ${ROOT_LIBRARIES} ${ROOT_LIBRARY_DIR}/libMinuit.so )
target_link_libraries (DL3plus1_data SBNfitlib tinyxmllib EventWeight ${ROOT_LIBRARIES} ${ROOT_LIBRARY_DIR}/libMinuit.so )
target_link_libraries (DL3plus1_siginject SBNfitlib tinyxmllib EventWeight ${ROOT_LIBRARIES} ${ROOT_LIBRARY_DIR}/libMinuit.so )
target_link_libraries (DL3plus1_massgen SBNfitlib tinyxmllib EventWeight)
target_link_libraries (covplotter SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DL3plus1_testregen SBNfitlib tinyxmllib EventWeight )
target_link_libraries (DL3plus1_FCwregen SBNfitlib tinyxmllib EventWeight ${ROOT_LIBRARIES} ${ROOT_LIBRARY_DIR}/libMinuit.so ${GPERFTOOLS_LIBS} )
