include_directories(${CMAKE_SOURCE_DIR}/inc)
include_directories ( ${EIGEN3_INCLUDE_DIRS} )
add_executable  (DLNuMuDisappearenceSens_MassGen DLNuMuDisappearenceSens_MassGen.cc)
add_executable  (DLNuMuDisappearenceSens DLNuMuDisappearenceSens.cc)
add_executable  (DLNuMuDisappearenceSens_BaseChi2 DLNuMuDisappearenceSens_BaseChi2.cc)
add_executable  (DLNuMuDisappearenceSens_RateOnly DLNuMuDisappearenceSens_RateOnly.cc)

add_executable  (DLNuMuDisappearenceSens_OneBinSaveTest DLNuMuDisappearenceSens_OneBinSaveTest.cc)
add_executable  (DetSysExplore DetSysExplore.cc)
add_executable  (DLNuMuDisappearenceSens_FakeDataDist DLNuMuDisappearenceSens_FakeDataDist.cc)
add_executable  (DLNuMuDisappearenceSens_InjectionTest DLNuMuDisappearenceSens_InjectionTest.cc)
add_executable  (DLNuMuDisappearenceSens_DataTest DLNuMuDisappearenceSens_DataTest.cc)
add_executable  (DLNuMuDisappearenceSens_ScalingTest DLNuMuDisappearenceSens_ScalingTest.cc)

target_link_libraries (DLNuMuDisappearenceSens SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DLNuMuDisappearenceSens_MassGen SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DLNuMuDisappearenceSens_BaseChi2 SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DLNuMuDisappearenceSens_OneBinSaveTest SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DetSysExplore SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DLNuMuDisappearenceSens_FakeDataDist SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DLNuMuDisappearenceSens_InjectionTest SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DLNuMuDisappearenceSens_DataTest SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DLNuMuDisappearenceSens_ScalingTest SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DLNuMuDisappearenceSens_RateOnly SBNfitlib tinyxmllib EventWeight)
