include_directories(${CMAKE_SOURCE_DIR}/inc)
include_directories ( ${EIGEN3_INCLUDE_DIRS} )


add_executable (DLDis DLDis.cc)
add_executable (DLCovar DLCovariance.cc)
add_executable (DLRaster DLRaster.cc)
add_executable (DLChiogram DLChiogram.cc)
add_executable (DLFreq DLFreq.cc)
add_executable (DLFakeData DLFakeData.cc)
add_executable (DLFakeDataGrid DLFakeDataGrid.cc)
#add_executable (UnfoldScale UnfoldScale.cxx)
#add_executable (DLUnfold DLUnfold.cc)
#add_executable (LEESens LEESens.cc)
#add_executable (Variations Variations.cxx)

target_link_libraries (DLDis SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DLRaster SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DLChiogram SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DLCovar SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DLFreq SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DLFakeData SBNfitlib tinyxmllib EventWeight)
target_link_libraries (DLFakeDataGrid SBNfitlib tinyxmllib EventWeight)
#target_link_libraries (UnfoldScale SBNfitlib tinyxmllib EventWeight)
#target_link_libraries (DLUnfold SBNfitlib tinyxmllib EventWeight)
#target_link_libraries (LEESens SBNfitlib tinyxmllib EventWeight)
#target_link_libraries (Variations SBNfitlib tinyxmllib EventWeight)
